log/build_2025-02-14_22-46-56/my_py_pubsub/stderr.log
  File "/home/sarmad/workspaces/hello_world/install/my_py_pubsub/lib/python3.10/site-packages/my_py_pubsub/listener.py", line 25
    if __name__ = "__main__":
       ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

  File "/home/sarmad/workspaces/hello_world/install/my_py_pubsub/lib/python3.10/site-packages/my_py_pubsub/talker.py", line 30
    if __name__ = "__main__":
       ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

